@@ -9,6 +9,7 @@
 	the session.
 	* src/su.c: Close the password databases together with syslog.
 	* src/su.c: Extract command line processing from main().
+	* src/su.c: Extract export of environment from main().
 
 2011-06-10  Nicolas François  <nicolas.francois@centraliens.net>
 
